--- a/tex/modules/3-S/exercises/S6.tex
+++ b/tex/modules/3-S/exercises/S6.tex
@@ -1,5 +1,5 @@
 \begin{problem}{S6}
-Find a basis for the solution set of the system of equations
+Find a basis for the solution space of the homogeneous system of equations
 \begin{align*}
 x+3y+3z+7w &= 0 \\
  x+3y-z-w &= 0 \\
@@ -8,15 +8,15 @@ x+3y+3z+7w &= 0 \\
 \end{align*}
 \end{problem}
 \begin{solution}
-$$\RREF\left(\begin{bmatrix} 1 & 3 & 3 & 7 \\ 1 & 3 & -1 & -1 \\ 2 & 6 & 3 & 8 \\ 1 & 3 & -2 & -3 \end{bmatrix}\right) = \begin{bmatrix} 1 & 3 & 0 & 1 \\ 0 & 0 & 1 & 2 \\ 0 & 0 & 0 & 0 \\ 0 & 0 & 0 & 0 \end{bmatrix}$$
-Then the solution set is
-$$\left\{ \begin{bmatrix} -3a-b \\ a \\ -2b \\ b \end{bmatrix}\ \big|\ a,b \in \IR\right\}$$
-So a basis for the solution set is $$ \left\{ \begin{bmatrix} 3 \\ -1 \\ 0 \\ 0 \end{bmatrix} , \begin{bmatrix} 1\\0 \\ 2 \\ -1 \end{bmatrix} \right\} $$
+\[\RREF\left(\begin{bmatrix} 1 & 3 & 3 & 7 \\ 1 & 3 & -1 & -1 \\ 2 & 6 & 3 & 8 \\ 1 & 3 & -2 & -3 \end{bmatrix}\right) = \begin{bmatrix} 1 & 3 & 0 & 1 \\ 0 & 0 & 1 & 2 \\ 0 & 0 & 0 & 0 \\ 0 & 0 & 0 & 0 \end{bmatrix}\]
+Then the solution space is
+\[\left\{ \begin{bmatrix} -3a-b \\ a \\ -2b \\ b \end{bmatrix}\ \big|\ a,b \in \IR\right\}\]
+So a basis for the solution space is \[\left\{ \begin{bmatrix} 3 \\ -1 \\ 0 \\ 0 \end{bmatrix} , \begin{bmatrix} 1\\0 \\ 2 \\ -1 \end{bmatrix} \right\}\]
 \end{solution}
 
 
 \begin{problem}{S6}
-Find a basis for the solution set of the system of equations
+Find a basis for the solution space of the homogeneous system of equations
 \begin{align*}
 x+2y+3z+w &= 0 \\
 3x-y+z+w &= 0 \\
@@ -25,15 +25,15 @@ x+2y+3z+w &= 0 \\
 \end{align*}
 \end{problem}
 \begin{solution}
-$$\RREF \left(\begin{bmatrix} 1 & -2 & 3 & 1 \\ 3 & -1 & 1 & 1 \\ 2 & -3 & -2 & 0 \\ -1 & 0 & 2 & 5 \end{bmatrix} \right) = \begin{bmatrix} 1 & 0 & 0 & -1 \\ 0 & 1 & 0 & -2 \\ 0 & 0 & 1 & 2 \\ 0 & 0 & 0 & 0\end{bmatrix}$$
-Then the solution set is
-$$\left\{ \begin{bmatrix} a \\ 2a \\ -2a \\ a \end{bmatrix} \bigg |\ a \in \IR \right\}$$
-So a basis for the solution set is $\left\{\begin{bmatrix} 1 \\ 2 \\ -2 \\ 1\end{bmatrix} \right\}$.
+\[\RREF \left(\begin{bmatrix} 1 & -2 & 3 & 1 \\ 3 & -1 & 1 & 1 \\ 2 & -3 & -2 & 0 \\ -1 & 0 & 2 & 5 \end{bmatrix} \right) = \begin{bmatrix} 1 & 0 & 0 & -1 \\ 0 & 1 & 0 & -2 \\ 0 & 0 & 1 & 2 \\ 0 & 0 & 0 & 0\end{bmatrix}\]
+Then the solution space is
+\[\left\{ \begin{bmatrix} a \\ 2a \\ -2a \\ a \end{bmatrix} \bigg |\ a \in \IR \right\}\]
+So a basis for the solution space is \(\left\{\begin{bmatrix} 1 \\ 2 \\ -2 \\ 1\end{bmatrix} \right\}\).
 \end{solution}
 
 
 \begin{problem}{S6}
-Find a basis for the solution set of the system of equations
+Find a basis for the solution space of the homogeneous system of equations
 \begin{align*}
 x+2y+3z+w &= 0 \\
 3x-y+z+w &= 0 \\
@@ -41,14 +41,14 @@ x+2y+3z+w &= 0 \\
 \end{align*}
 \end{problem}
 \begin{solution}
-$$\RREF \left(\begin{bmatrix} 1 & -2 & 3 & 1 \\ 3 & -1 & 1 & 1 \\ 2 & -3 & -2 & 0  \end{bmatrix} \right) = \begin{bmatrix} 1 & 0 & \frac{5}{7} & \frac{3}{7} \\ 0 & 1 & \frac{8}{7} & \frac{2}{7} \\ 0 & 0 & 0 & 0\end{bmatrix}$$
-Then the solution set is
-$$\left\{ \begin{bmatrix} -\frac{5}{7}a-\frac{3}{7}b \\ -\frac{8}{7}a-\frac{2}{7}b \\ a \\ b \end{bmatrix} \bigg |\ a,b \in \IR \right\}$$
-So a basis for the solution set is $\left\{\begin{bmatrix} -\frac{5}{7} \\ -\frac{8}{7} \\ 1 \\ 0\end{bmatrix}, \begin{bmatrix} - \frac{3}{7} \\ -\frac{2}{7} \\ 0 \\ 1 \end{bmatrix} \right\}$, or $\left\{\begin{bmatrix} 5 \\ 8 \\ -7 \\ 0 \end{bmatrix}, \begin{bmatrix} 3 \\ 2 \\ 0 \\ -7 \end{bmatrix}\right\}$.
+\[\RREF \left(\begin{bmatrix} 1 & -2 & 3 & 1 \\ 3 & -1 & 1 & 1 \\ 2 & -3 & -2 & 0  \end{bmatrix} \right) = \begin{bmatrix} 1 & 0 & \frac{5}{7} & \frac{3}{7} \\ 0 & 1 & \frac{8}{7} & \frac{2}{7} \\ 0 & 0 & 0 & 0\end{bmatrix}\]
+Then the solution space is
+\[\left\{ \begin{bmatrix} -\frac{5}{7}a-\frac{3}{7}b \\ -\frac{8}{7}a-\frac{2}{7}b \\ a \\ b \end{bmatrix} \bigg |\ a,b \in \IR \right\}\]
+So a basis for the solution space is \(\left\{\begin{bmatrix} -\frac{5}{7} \\ -\frac{8}{7} \\ 1 \\ 0\end{bmatrix}, \begin{bmatrix} - \frac{3}{7} \\ -\frac{2}{7} \\ 0 \\ 1 \end{bmatrix} \right\}\), or \(\left\{\begin{bmatrix} 5 \\ 8 \\ -7 \\ 0 \end{bmatrix}, \begin{bmatrix} 3 \\ 2 \\ 0 \\ -7 \end{bmatrix}\right\}\).
 \end{solution}
 
 \begin{problem}{S6}
-Find a basis for the solution set to the system of equations
+Find a basis for the solution space to the system of equations
 \begin{align*}
 x+2y-3z &= 0 \\
 2x+y-4z &= 0 \\
@@ -57,14 +57,14 @@ x -y -z &= 0
 \end{align*}
 \end{problem}
 \begin{solution}
-$$\RREF \left(\begin{bmatrix} 1 & 2 & -3 \\ 2 & 1 & -4 \\ 0 & 3 & -2 \\ 1 & -1 & -1 \end{bmatrix} \right) = \begin{bmatrix} 1 & 0 & -\frac{5}{3} \\ 0 & 1 & -\frac{2}{3} \\ 0 & 0 & 0 \\ 0 & 0 & 0 \end{bmatrix}$$
-Then the solution set is
-$$\left\{ \begin{bmatrix} \frac{5}{3}a \\ \frac{2}{3}a \\ a \end{bmatrix} \bigg|\ a \in \IR \right\}$$
-So a basis is $\left\{ \begin{bmatrix} \frac{5}{3} \\ \frac{2}{3} \\ 1 \end{bmatrix} \right\}$ or $\left\{ \begin{bmatrix} 5 \\  2 \\ 3 \end{bmatrix} \right\}$.
+\[\RREF \left(\begin{bmatrix} 1 & 2 & -3 \\ 2 & 1 & -4 \\ 0 & 3 & -2 \\ 1 & -1 & -1 \end{bmatrix} \right) = \begin{bmatrix} 1 & 0 & -\frac{5}{3} \\ 0 & 1 & -\frac{2}{3} \\ 0 & 0 & 0 \\ 0 & 0 & 0 \end{bmatrix}\]
+Then the solution space is
+\[\left\{ \begin{bmatrix} \frac{5}{3}a \\ \frac{2}{3}a \\ a \end{bmatrix} \bigg|\ a \in \IR \right\}\]
+So a basis is \(\left\{ \begin{bmatrix} \frac{5}{3} \\ \frac{2}{3} \\ 1 \end{bmatrix} \right\}\) or \(\left\{ \begin{bmatrix} 5 \\  2 \\ 3 \end{bmatrix} \right\}\).
 \end{solution}
 
 \begin{problem}{S6}
-Find a basis for the solution set to the homogeneous system of equations
+Find a basis for the solution space to the homogeneous system of equations
 \begin{align*}
 2x_1+3x_2-5x_3+14x_4 &= 0\\
 x_1+x_2-x_3+5x_4 &= 0
@@ -78,11 +78,11 @@ Let \(A =
   \end{bmatrix}
 \), so \(\RREF A =
   \begin{bmatrix}[cccc|c]
-    1 & 0 & 2 & 1 & 1 \\
-    0 & 1 & -3 & 4 & 2 \\
+    1 & 0 & 2 & 1 & 0 \\
+    0 & 1 & -3 & 4 & 0 \\
   \end{bmatrix}
 \).
-It follows that the basis for the solution set is given by \(\left\{
+It follows that the basis for the solution space is given by \(\left\{
   \begin{bmatrix}
     - 2 \\
     3 \\
@@ -99,7 +99,7 @@ It follows that the basis for the solution set is given by \(\left\{
 \end{solution}
 
 \begin{problem}{S6}
-Find a basis for the solution set to the homogeneous system of equations
+Find a basis for the solution space to the homogeneous system of equations
 \begin{align*}
 4x_1+4x_2+3x_3-6x_4 &= 0 \\
 -2x_3-4x_4 &= 0 \\
@@ -120,7 +120,7 @@ Let \(A =
     0 & 0 & 0 & 0 & 0
   \end{bmatrix}
 \).
-It follows that the basis for the solution set is given by \(\left\{
+It follows that the basis for the solution space is given by \(\left\{
   \begin{bmatrix}
     -1 \\
     1 \\
@@ -137,7 +137,7 @@ It follows that the basis for the solution set is given by \(\left\{
 \end{solution}
 
 \begin{problem}{S6}
-Find a basis for the solution set to the homogeneous system of equations
+Find a basis for the solution space to the homogeneous system of equations
 given by
 \begin{align*}
 3x+2y+z &= 0 \\
@@ -156,7 +156,7 @@ Let \(A =
     0 & 1 & 2 & 0
   \end{bmatrix}
 \).
-It follows that the basis for the solution set is given by \(\left\{
+It follows that the basis for the solution space is given by \(\left\{
   \begin{bmatrix}
     1 \\
     -2 \\
@@ -166,7 +166,7 @@ It follows that the basis for the solution set is given by \(\left\{
 \end{solution}
 
 \begin{problem}{S6}
-Find a basis for the solution set to the homogeneous system of equations
+Find a basis for the solution space to the homogeneous system of equations
 given by
 \begin{align*}
 2x_1-2x_2+6x_3-x_4 &=0 \\
@@ -188,7 +188,7 @@ Let \(A =
     0 & 0 & 0 & 1 & 0
   \end{bmatrix}
 \).
-It follows that the basis for the solution set is given by \(\left\{
+It follows that the basis for the solution space is given by \(\left\{
   \begin{bmatrix}
     -2 \\
     1 \\
