Tweak language on RAT 3

--- a/tex/modules/3-S/readiness/test.tex
+++ b/tex/modules/3-S/readiness/test.tex
@@ -134,7 +134,7 @@ $$4
   \end{multicols}
 
 
-  \item Solve the following system of linear equations.
+  \item Find the solution set of the following system of linear equations.
   \begin{alignat*}{4}
     2x_1 &\,+\,& x_2 &\,+\,& 4x_3 &\,=\,& 0 \\
      x_1 &\,+\,& x_2 &\,+\,&  x_3 &\,=\,& 1 \\
@@ -142,44 +142,37 @@ $$4
   \end{alignat*}
 
 %Correct C
-  \begin{multicols}{2}
+  \begin{multicols}{4}
   \begin{readinessAssuranceTestChoices}
   \item \(
-          \begin{bmatrix}
-            x_1 \\ x_2 \\ x_3
-          \end{bmatrix}=
-          \begin{bmatrix}
+		  \left\{
+		  \begin{bmatrix}
             1 \\ -6 \\ 1
           \end{bmatrix}
+			\right\}
         \)
   \item \(
+		 \setBuilder{ 
           \begin{bmatrix}
-            x_1 \\ x_2 \\ x_3
-          \end{bmatrix}=
-          \begin{bmatrix}
-            1 \\ -2 \\ 1
-          \end{bmatrix}+
-          a
-          \begin{bmatrix}
-            1 \\ 0 \\ 3
+            1 +a\\ -2 \\ 1+3a
           \end{bmatrix}
-        \)  for all real numbers \(a\)
+		  }{a \in \IR}
+		 \)
 	\item \(
-          \begin{bmatrix}
-            x_1 \\ x_2 \\ x_3
-          \end{bmatrix}=
+		  \left\{
           \begin{bmatrix}
             2 \\ 0 \\ -1
           \end{bmatrix}
+		  \right\}
         \) % correct
 
-  \item No solutions
+  \item The system is inconsistent   
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
+\vspace{1in}
 
-
-\item Solve the following system of linear equations.
+\item Find the solution set of the following system of linear equations.
   \begin{alignat*}{5}
      x_1 &\,+\,& x_2 &\,+\,&  x_3 &\,+\,&  x_4 &\,=\,& 4 \\
      2x_1 &\,+\,& 3x_2 &\, \,&     &\,+\,&  x_4 &\,=\,& 0 \\
@@ -188,40 +181,28 @@ $$4
   \begin{multicols}{2}
   \begin{readinessAssuranceTestChoices}
   \item \(
-          \begin{bmatrix}
-            x_1 \\ x_2 \\ x_3 \\ x_4
-          \end{bmatrix}=
+		  \left\{
           \begin{bmatrix}
             1 \\ 2 \\ 0 \\ 1
           \end{bmatrix}
+		  \right\}
         \)
   \item \(
+		  \setBuilder{
           \begin{bmatrix}
-            x_1 \\ x_2 \\ x_3 \\ x_4
-          \end{bmatrix}=
-          \begin{bmatrix}
-            12 \\ -8 \\ 0 \\ 0
-          \end{bmatrix}+a
-          \begin{bmatrix}
-            -3 \\ 2 \\ 1 \\ 0
-          \end{bmatrix}+b
-          \begin{bmatrix}
-            -2 \\ 1 \\ 0 \\ 1
+            12 -3a-2b \\ -8+2a+b \\ a \\ b
           \end{bmatrix}
-        \) \\ for all real numbers \(a,b\)  % correct
+		  }{a,b \in \IR}
+        \)   % correct
 		\item \(
+		  \setBuilder{
           \begin{bmatrix}
-            x_1 \\ x_2 \\ x_3 \\ x_4
-          \end{bmatrix}=
-          \begin{bmatrix}
-            1 \\ 1 \\ 4 \\ -5
-          \end{bmatrix}+a
-          \begin{bmatrix}
-            0 \\ 3 \\ 1 \\ 1
+            1 \\ 1 +3a\\ 4+a \\ -5+a
           \end{bmatrix}
-        \) for all real numbers \(a\)
+			}{a \in \IR}
+        \)
 
-  \item No solutions \\
+  \item The system is inconsistent 
   \ \\ \ \\
   \end{readinessAssuranceTestChoices}
   \end{multicols}
@@ -323,7 +304,6 @@ $$4
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
-\vspace{1in}
 
 %Correct A
 \item What best describes \(\vspan\left\{
