--- a/tex/modules/4-A/exercises/A2.tex
+++ b/tex/modules/4-A/exercises/A2.tex
@@ -1,42 +1,126 @@
-\begin{problem}{A2} 
- Determine if $T: \IR^2 \rightarrow \IR^2$ given by $T\left(\begin{bmatrix} x \\ y \end{bmatrix}\right) = \begin{bmatrix} e^{x} \\ e^y \end{bmatrix}$ is a linear transformation.
+\begin{problem}{A2}
+Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by $$T\left(\begin{bmatrix} x \\ y \\ z \\  \end{bmatrix} \right) = \begin{bmatrix} -3x+y \\ -8x+2y-z \\ 2y+3z \\ 0 \end{bmatrix}.$$  
+\begin{enumerate}[(a)]
+\item Write the matrix for $T$ with respect to the standard bases of $\IR^3$ and $\IR^4$.
+\item Compute \(T\left( \begin{bmatrix} 2 \\ 1 \\ -1 \end{bmatrix}\right)\)
+\end{enumerate}
+\end{problem}
+
+\begin{problem}{A2}
+Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by the standard matrix
+\[ \begin{bmatrix}
+2 & 1 & -1 \\ 0 & 1 & 3 \\ 2 & -1 & 5 \\ 0 & 0 & 0 
+\end{bmatrix}. \]
+\begin{enumerate}[(a)]
+\item Compute \( T\left( \begin{bmatrix}x\\ y \\ z \end{bmatrix} \right) \)
+\item Compute \(T\left( \begin{bmatrix} -2 \\ 1 \\ -1 \end{bmatrix}\right)\)
+\end{enumerate}
+\end{problem}
+
+\begin{problem}{A2}
+Let $T: \IR^2\rightarrow \IR^4$ be the linear transformation given by the standard matrix
+\[ \begin{bmatrix}
+2 & 1   \\ 0 & 1  \\ 2 & -1  \\ 3 & 3  
+\end{bmatrix}. \]
+\begin{enumerate}[(a)]
+\item Compute \( T\left( \begin{bmatrix}x\\ y  \end{bmatrix} \right) \)
+\item Compute \(T\left( \begin{bmatrix}  1 \\ -1 \end{bmatrix}\right)\)
+\end{enumerate}
+\end{problem}
+
+\begin{problem}{A2}
+Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by $$T\left(\begin{bmatrix} x \\ y \\ z \\  \end{bmatrix} \right) = \begin{bmatrix} -3x+y \\ -8x+2y-z \\ 7x+2y+3z \\ 0 \end{bmatrix}.$$  
+\begin{enumerate}[(a)]
+\item Write the matrix for $T$ with respect to the standard bases of $\IR^3$ and $\IR^4$.
+\item Compute \( T\left( \begin{bmatrix}-2 \\ 0 \\ 3 \end{bmatrix} \right) \)
+\end{enumerate}
+\end{problem}
+
+\begin{problem}{A2}
+Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by $$T\left(\begin{bmatrix} x \\ y \\ z \\  \end{bmatrix} \right) = \begin{bmatrix} -3x+y \\ -8x+2y-z \\ 2y+3z \\ 7x \end{bmatrix}.$$  
+\begin{enumerate}[(a)]
+\item Write the matrix for $T$ with respect to the standard bases of $\IR^3$ and $\IR^4$.
+\item Compute \( T\left( \begin{bmatrix}-2 \\ 1 \\ 3 \end{bmatrix} \right) \)
+\end{enumerate}
 \end{problem}
 \begin{solution}
-It is not linear.  For example, $$\begin{bmatrix}e^2 \\ 1 \end{bmatrix} = T\left(\begin{bmatrix} 2 \\ 0 \end{bmatrix} \right) \neq 2 T\left(\begin{bmatrix} 1 \\ 0 \end{bmatrix}\right)=\begin{bmatrix} 2e \\ 1 \end{bmatrix}$$
+$$\begin{bmatrix} 3 & 1 & 0 \\ -8 & 2 & -1 \\ 0 & 2 & 3 \\ 7 & 0 & 0 \end{bmatrix}$$
 \end{solution}
 
-\begin{problem}{A2} 
-Let $T: \IR^2 \rightarrow \IR^2$ be given by $T\left(\begin{bmatrix}x \\ y  \end{bmatrix} \right) = \begin{bmatrix} x+y \\ \sqrt{x}+\sqrt{y} \end{bmatrix}$.  Determine if $T$ is a linear transformation.
+\begin{problem}{A2}
+Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by the standard matrix
+$$\begin{bmatrix} 3 & 1 & 0 \\ -8 & 2 & -1 \\ 0 & 2 & 3 \\ 7 & 0 & 0 \end{bmatrix}.$$
+\begin{enumerate}[(a)]
+\item Compute \( T\left( \begin{bmatrix}x\\ y \\ z \end{bmatrix} \right) \)
+\item Compute \( T\left( \begin{bmatrix}-2 \\ 1 \\ 3 \end{bmatrix} \right) \)
+\end{enumerate}
+\end{problem}
+
+\begin{problem}{A2}
+Let $T: \IR^4 \rightarrow \IR^2$ be the linear transformation given by the standard matrix 
+$$\begin{bmatrix} 1 & 0 & 3 & 0 \\ 0 & 3 & -5 & 0 \end{bmatrix}.$$
+\begin{enumerate}[(a)]
+\item Compute \( T\left( \begin{bmatrix}x\\ y \\ z \\ w \end{bmatrix} \right) \)
+\item Compute \( T\left( \begin{bmatrix} 1 \\ 3 \\ -1 \\ 2\end{bmatrix} \right) \)
+\end{enumerate}
 \end{problem}
 \begin{solution}
-$$T\left(\begin{bmatrix} 0 \\ 4 \end{bmatrix}\right) = \begin{bmatrix} 4 \\ 2 \end{bmatrix} \neq \begin{bmatrix} 4 \\ 4 \end{bmatrix} = 4T\left(\begin{bmatrix} 0 \\ 1 \end{bmatrix} \right)$$
-So $T$ is not a linear transformation.
 \end{solution}
 
 \begin{problem}{A2}
-Determine if $D: \IR^{2\times 2} \rightarrow \IR$ given by $D\left(\begin{bmatrix} a & b \\ c & d \end{bmatrix} \right) = ad-bc$ is a linear transformation or not.
+Let $T: \IR^4 \rightarrow \IR^2$ be the linear transformation given by $$T\left(\begin{bmatrix} x_1 \\ x_2 \\ x_3 \\ x_4 \end{bmatrix} \right) = \begin{bmatrix} x_1+3x_3 \\ 3x_2-x_3 \end{bmatrix}.$$ 
+\begin{enumerate}[(a)]
+\item Write the matrix for $T$ with respect to the standard bases of $\IR^4$ and $\IR^2$.
+\item Compute \( T\left( \begin{bmatrix} 1 \\ 3 \\ -1 \\ 2 \end{bmatrix} \right) \)
+\end{enumerate}
+\end{problem}
+
+
+\begin{problem}{A2}
+Let $T: \IR^4 \rightarrow \IR^2$ be the linear transformation given by $$T\left(\begin{bmatrix} x_1 \\ x_2 \\ x_3 \\ x_4 \end{bmatrix} \right) = \begin{bmatrix} x_1+3x_3 \\ 3x_2-5x_3 \end{bmatrix}.$$ 
+\begin{enumerate}[(a)]
+\item Write the matrix for $T$ with respect to the standard bases of $\IR^4$ and $\IR^2$.
+\item Compute \( T\left( \begin{bmatrix} 1 \\ 3 \end{bmatrix} \right) \)
+\end{enumerate}
+\end{problem}
+
+
+\begin{problem}{A2}
+Let $T: \IR^3 \rightarrow \IR$ be the linear transformation given by $$T\left(\begin{bmatrix} x_1 \\ x_2 \\ x_3  \end{bmatrix} \right) = \begin{bmatrix} x_2+3x_3 \end{bmatrix}.$$ 
+\begin{enumerate}[(a)]
+\item Write the matrix for $T$ with respect to the standard bases of $\IR^3$ and $\IR$.
+\item Compute \( T\left( \begin{bmatrix} 1 \\ 3 \\ -5\end{bmatrix} \right) \)
+\end{enumerate}
 \end{problem}
 \begin{solution}
-$D(I)=1$ but $D(2I)=4 \neq 2D(I)$, so $D$ is not linear.
+$$\begin{bmatrix} 0 & 1 & 3 \end{bmatrix}$$
 \end{solution}
 
 \begin{problem}{A2}
-Determine if $D: \IR^{2\times 2} \rightarrow \IR$ given by $D\left(\begin{bmatrix} a & b \\ c & d \end{bmatrix} \right) = a-3c$ is a linear transformation or not.
+Let $T: \IR^3 \rightarrow \IR$ be the linear transformation given by the standard matrix
+$$\begin{bmatrix} 0 & 1 & 3 \end{bmatrix}.$$
+\begin{enumerate}[(a)]
+\item Compute \( T\left( \begin{bmatrix}x\\ y \\ z  \end{bmatrix} \right) \)
+\item Compute \( T\left( \begin{bmatrix} 2 \\ 3 \\ -1\end{bmatrix} \right) \)
+\end{enumerate}
 \end{problem}
 
 \begin{problem}{A2}
-Determine if the map $T: \P^6  \rightarrow \P^6$ given by $T(f) = f(x)-f(0)$ is a linear transformation or not.
+Let $T: \IR^3 \rightarrow \IR$ be the linear transformation given by $$T\left(\begin{bmatrix} x_1 \\ x_2 \\ x_3  \end{bmatrix} \right) = \begin{bmatrix} x_3+3x_1 \end{bmatrix}.$$ 
+\begin{enumerate}[(a)]
+\item Write the matrix for $T$ with respect to the standard bases of $\IR^3$ and $\IR$.
+\item Compute \( T\left( \begin{bmatrix} -1 \\ 7 \\ 3\end{bmatrix} \right) \)
+\end{enumerate}
 \end{problem}
+\begin{solution}
+$$\begin{bmatrix} 3 & 0 & 1 \end{bmatrix}$$
+\end{solution}
 
 \begin{problem}{A2}
-Determine if the map $T: \P^6  \rightarrow \P^7$ given by $T(f) = xf(x)-f(1)$ is a linear transformation or not.
-\end{problem}
-
-\begin{problem}{A2}
-Determine if the map $T: \P  \rightarrow \P$ given by $T(f) = f^{\prime}-f^{\prime \prime}$ is a linear transformation or not.
-\end{problem}
-
-
-\begin{problem}{A2}
-Determine if the map $T: \P^3 \rightarrow \P^4$ given by $T(f(x))=xf(x)-f(x)$ is a linear transformation or not.
+Let $T: \IR^3 \rightarrow \IR$ be the linear transformation given by the standard matrix
+$$\begin{bmatrix} 3 & 0 & 1 \end{bmatrix}$$
+\begin{enumerate}[(a)]
+\item Compute \( T\left( \begin{bmatrix}x\\ y \\ z  \end{bmatrix} \right) \)
+\item Compute \( T\left( \begin{bmatrix} -2 \\ 4 \\ 3\end{bmatrix} \right) \)
+\end{enumerate}
 \end{problem}
