Sample exercises through module M

--- a/tex/modules/4-A/exercises/A1.tex
+++ b/tex/modules/4-A/exercises/A1.tex
@@ -14,14 +14,14 @@ So $T$ is not a linear transformation.
 \end{solution}
 
 \begin{problem}{A1}
-Determine if $D: \IR^{2\times 2} \rightarrow \IR$ given by $D\left(\begin{bmatrix} a & b \\ c & d \end{bmatrix} \right) = ad-bc$ is a linear transformation or not.
+Determine if $D: M_{2,2} \rightarrow \IR$ given by $D\left(\begin{bmatrix} a & b \\ c & d \end{bmatrix} \right) = ad-bc$ is a linear transformation or not.
 \end{problem}
 \begin{solution}
 $D(I)=1$ but $D(2I)=4 \neq 2D(I)$, so $D$ is not linear.
 \end{solution}
 
 \begin{problem}{A1}
-Determine if $D: \IR^{2\times 2} \rightarrow \IR$ given by $D\left(\begin{bmatrix} a & b \\ c & d \end{bmatrix} \right) = a-3c$ is a linear transformation or not.
+Determine if $D: M_{2,2} \rightarrow \IR$ given by $D\left(\begin{bmatrix} a & b \\ c & d \end{bmatrix} \right) = a-3c$ is a linear transformation or not.
 \end{problem}
 
 \begin{problem}{A1}
