--- a/tex/modules/4-A/exercises/A4.tex
+++ b/tex/modules/4-A/exercises/A4.tex
@@ -83,7 +83,7 @@ Thus \(\left\{
 
 
 \begin{problem}{A4}
-Let $T: \IR^{2\times 3} \rightarrow \IR^3$ be the linear map given by \(
+Let $T: M_{2,3} \rightarrow \IR^3$ be the linear map given by \(
   T\left(\begin{bmatrix} a & b & c \\ x & y & z \end{bmatrix} \right) =
   \begin{bmatrix}
     a+x \\ b+y \\ c+z
@@ -122,7 +122,7 @@ Thus \(\left\{
 
 
 \begin{problem}{A4}
-Let $T: \IR^{2\times 2} \rightarrow \IR^3$ be the linear map given by $T\left(\begin{bmatrix} x & y \\ z & w \end{bmatrix} \right) = \begin{bmatrix}  8x-3y-z+4w \\ y+3z-4w \\ -7x+3y+2z-5w\end{bmatrix} $.
+Let $T: M_{2,2} \rightarrow \IR^3$ be the linear map given by $T\left(\begin{bmatrix} x & y \\ z & w \end{bmatrix} \right) = \begin{bmatrix}  8x-3y-z+4w \\ y+3z-4w \\ -7x+3y+2z-5w\end{bmatrix} $.
 Compute a basis for the kernel and a basis for the image of $T$.
 \end{problem}
 \begin{solution}
@@ -133,7 +133,7 @@ Thus \(\left\{ \begin{bmatrix} 8 \\ 0 \\ -7 \end{bmatrix}, \begin{bmatrix} -3 \\
 
 
 \begin{problem}{A4}
-Let $T: \IR^{2\times 2} \rightarrow \IR^3$ be the linear map given by \(
+Let $T: M_{2,2} \rightarrow \IR^3$ be the linear map given by \(
   T\left(\begin{bmatrix} a & b \\ x & y \end{bmatrix} \right) =
   \begin{bmatrix}
     a+x \\ 0 \\ b+y
