--- a/tex/sample-exercises.tex
+++ b/tex/sample-exercises.tex
@@ -562,6 +562,121 @@ a basis for the solution space is
 \[ \left \{ \begin{bmatrix} -2 \\ -1 \\ 1 \\ 0 \\ 0 \end{bmatrix} , \begin{bmatrix} -1 \\ 0 \\ 0 \\ -1 \\ 1 \end{bmatrix} \right\}.\]
 \end{solution}
 
+\begin{problem}{A1}
+Determine if $T: M_{2,2} \rightarrow \IR$ given by $T\left(\begin{bmatrix} a & b \\ c & d \end{bmatrix} \right) = 3a-2b+4d$ is a linear transformation or not.
+\end{problem}
+\begin{solution}
+\begin{align*}
+	T \left(\begin{bmatrix} a_{11} & a_{12} \\ a_{21} & a_{22} \end{bmatrix} \right) + 
+	T \left(\begin{bmatrix} b_{11} & b_{12} \\ b_{21} & b_{22} \end{bmatrix} \right) &= 
+	3a_{11}-2a_{12}+4a_{22} + 3b_{11}-2b_{12}+4b_{22} \\ 
+	T \left(\begin{bmatrix} a_{11} & a_{12} \\ a_{21} & a_{22} \end{bmatrix}  + 
+	\begin{bmatrix} b_{11} & b_{12} \\ b_{21} & b_{22} \end{bmatrix} \right) &= 
+	T \left(\begin{bmatrix} a_{11}+b_{11} & a_{12}+b_{12} \\ a_{21}+b_{21} & a_{22}+b_{22} \end{bmatrix} \right)= 
+	3(a_{11}+b_{11})-2(a_{12}+b_{12})+4(a_{22}+b_{22})
+\end{align*}
+
+\[ 
+	cT \left(\begin{bmatrix} a_{11} & a_{12} \\ a_{21} & a_{22} \end{bmatrix} \right) = 
+	c\left(3a_{11}-2a_{12}+4a_{22}\right) =
+	3ca_{11}-2ca_{12}+4ca_{22}= 
+	T \left(\begin{bmatrix} ca_{11} & ca_{12} \\ ca_{21} & ca_{22} \end{bmatrix} \right)= 
+	T \left(c\begin{bmatrix} a_{11} & a_{12} \\ a_{21} & a_{22} \end{bmatrix}\right)
+\]
+Since \(T\) respects both addition and scalar multiplication, it is a linear transformation.
+\end{solution}
+
+\begin{problem}{A2}
+Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by $$T\left(\begin{bmatrix} x \\ y \\ z \\  \end{bmatrix} \right) = \begin{bmatrix} -x+y \\ -x+3y-z \\ 7x+y+3z \\ 0 \end{bmatrix}.$$  
+\begin{enumerate}[(a)]
+\item Write the matrix for $T$ with respect to the standard bases of $\IR^3$ and $\IR^4$.
+\item Compute \( T\left( \begin{bmatrix} 1 \\ 1 \\ 3 \end{bmatrix} \right) \)
+\end{enumerate}
+\end{problem}
+
+\begin{solution}
+\begin{enumerate}[(a)]
+\item Since 
+\begin{align*}
+T\left(\begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix}\right) &= \begin{bmatrix} -1 \\ -1 \\ 7 \\0\end{bmatrix} &
+T\left(\begin{bmatrix} 0 \\ 1 \\ 0 \end{bmatrix}\right) &= \begin{bmatrix} 1 \\ 3 \\ 1 \\0 \end{bmatrix}  &
+T\left(\begin{bmatrix} 0 \\ 0 \\ 1 \end{bmatrix}\right) &= \begin{bmatrix} 0 \\ -1 \\ 3 \\ 0  \end{bmatrix}
+\end{align*}
+The standard matrix is \( \begin{bmatrix} -1 & 1 & 0 \\ -1 & 3 & -1 \\ 7 & 1 & 3  \\ 0 & 0 & 0 \end{bmatrix} \).
+\item \( T\left( \begin{bmatrix}-2 \\ 0 \\ 3 \end{bmatrix} \right)  = \begin{bmatrix} 0 \\ -1 \\ 11 \\ 0 \end{bmatrix}\)
+\end{enumerate}
+\end{solution}
+
+\begin{problem}{A3}
+Determine if each of the following linear transformations is injective (one-to-one) and/or surjective (onto).
+\begin{enumerate}[(a)]
+\item $S: \IR^2 \rightarrow \IR^2$ given by the standard matrix $\begin{bmatrix} 1 & 1 \\ -1 & 0 \end{bmatrix}$.
+\item $T: \IR^4 \rightarrow \IR^3$ given by the standard matrix $\begin{bmatrix} 1 & 3 & 2 & -3 \\ 2 & 4 & 6 & -10 \\ 1 & 6 & -1 & 3 \end{bmatrix}$
+\end{enumerate}
+\end{problem}
+\begin{solution}
+\begin{enumerate}[(a)]
+\item $ \RREF\begin{bmatrix} 1 & 1 \\ -1 & 0 \end{bmatrix}=\begin{bmatrix}1 & 0 \\ 0 & 1 \end{bmatrix}$.  Since each column is a pivot column, $S$ is injective.  Since there is no zero row, $S$ is surjective.
+\item $$\RREF\left(\begin{bmatrix}1 & 3 & 2 & -3 \\ 2 & 4 & 6 & -10 \\ 1 & 6 & -1 & 3 \end{bmatrix}\right) = \begin{bmatrix} 1 & 0 & 5 & -9 \\ 0 & 1 & -1 & 2 \\ 0 & 0 & 0 & 0\end{bmatrix}$$
+Since there is a row of zeroes, the image of \(T\) does not span \(\IR^3\), so \(T\) is not surjective.  Since there are non-pivot columns, \(T\) is not injective either.  Alternatively, since $\dim \IR^4 > \dim \IR^3$, $T$ is not injective.
+
+\end{enumerate}
+\end{solution}
+
+
+\begin{problem}{A4}
+Let $T: \P^3 \rightarrow \P^2$ be the linear transformation given by 
+\[T\left( ax^3+bx^2+cx+d \right)  = (a+3b+2c-3d)x^2 + (2a+4b+6c-10d)x+  (a+6b-c+3d).\]
+Compute a basis for the kernel and a basis for the image of $T$.
+\end{problem}
+\begin{solution}
+First, write down the standard matrix with respect to the ordered bases \(\{x^3,x^2,x,1\} \) and \(\{x^2,x,1\}\), namely \[A=\begin{bmatrix}1 & 3 & 2 & -3 \\ 2 & 4 & 6 & -10 \\ 1 & 6 & -1 & 3 \end{bmatrix}.\]
+Then we compute
+\[\RREF\left(A\right) = \begin{bmatrix} 1 & 0 & 5 & -9 \\ 0 & 1 & -1 & 2 \\ 0 & 0 & 0 & 0\end{bmatrix}.\]
+
+The kernel is given by solution set of the corresponding homogeneous system of equations translated back to polynomials i.e. 
+\[ \ker T = \setBuilder{  (-5a+9b)x^3 + (a-2b)x^2 + ax + b }{a,b \in \IR} \]
+Then a basis for the kernel is
+$$\left\{ -5x^3+x^2+x, 9x^3-2bx^2+b \right\}.$$
+A basis for the image is given by the polynomials corresponding to pivot columns, namely
+$$\left\{  x^2+2x+1, 3x^2+4x+6\right\}. $$
+\end{solution}
+
+\begin{problem}{M1}
+Let
+\begin{align*}
+A &= \begin{bmatrix} 1 & -3 \\ 0 & 1 \end{bmatrix} & B&= \begin{bmatrix} 4 & 1 & 2 \end{bmatrix} & C&= \begin{bmatrix} 0 & 1 & 3 \\ 1 & -2 & 5 \end{bmatrix}
+\end{align*}
+
+Exactly one of the six products $AB$, $AC$, $BA$, $BC$, $CA$, $CB$ can be computed.  Determine which one, and compute it.
+\end{problem}
+\begin{solution}
+\(AC\) is the only one that can be computed.
+\begin{align*}
+AC\left( \vec{e}_1 \right) &= A \left( \begin{bmatrix} 0 \\ 1 \end{bmatrix} \right) = 0 \begin{bmatrix} 1 \\ 0 \end{bmatrix} + 1\begin{bmatrix} -3 \\ 1 \end{bmatrix} = \begin{bmatrix} -3 \\ 1 \end{bmatrix} \\
+AC\left( \vec{e}_2 \right) &= A \left( \begin{bmatrix} 1 \\ -2 \end{bmatrix} \right) = 1 \begin{bmatrix} 1 \\ 0 \end{bmatrix} -2\begin{bmatrix} -3 \\ 1 \end{bmatrix} = \begin{bmatrix} 7 \\ -2 \end{bmatrix} \\
+AC\left( \vec{e}_3 \right) &= A \left( \begin{bmatrix} 1 \\ -2 \end{bmatrix} \right) = 3 \begin{bmatrix} 1 \\ 0 \end{bmatrix} + 5\begin{bmatrix} -3 \\ 1 \end{bmatrix} = \begin{bmatrix} -12 \\ 5 \end{bmatrix} \\
+\end{align*}
+Thus
+$$AC = \begin{bmatrix} -3 & 7 & -12 \\ 1 & -2 & 5 \end{bmatrix}.$$
+\end{solution}
+
+\begin{problem}{M2}
+Determine if the matrix \(\begin{bmatrix}1 & 3 & 2  \\ 2 & 4 & 6  \\ 1 & 6 & -1 \end{bmatrix}\) is invertible or not.
+\end{problem}
+\begin{solution}
+We compute 
+\[\RREF\left(\begin{bmatrix}1 & 3 & 2  \\ 2 & 4 & 6  \\ 1 & 6 & -1 \end{bmatrix}\right) = \begin{bmatrix} 1 & 0 & 5 \\ 0 & 1 & -1 \\ 0 & 0 & 0 \end{bmatrix}.\]
+Since this is not the identity matrix, the matrix is not invertible.  Alternatively, one might notice that the second row is a multiple of the first row, which means it is similar to a matrix with a row of zeroes, which is not invertible, so it is not invertible either.
+\end{solution}
+
+\begin{problem}{M3}
+Compute the inverse of the matrix $\begin{bmatrix} 1 & 2 & 3 & 5 \\ 0 & -1 & 4 & -2 \\ 0 & 0 & 1 & 3 \\ 0 & 0 & 0 & 1 \end{bmatrix}$.
+\end{problem}
+\begin{solution}
+$$\RREF\left(\begin{bmatrix}[cccc|cccc] 1 & 2 & 3 & 5 & 1 & 0 & 0 & 0  \\ 0 & -1 & 4 & -2 & 0 & 1 & 0 & 0 \\ 0 & 0 & 1 & 3 & 0 & 0 & 1 & 0 \\ 0 & 0 & 0 & 1 & 0 & 0 & 0 & 1 \end{bmatrix}\right) = \begin{bmatrix}[cccc|cccc] 1 & 0 & 0 &0 & 1 & 2 & -11 & 32 \\ 0 & 1 & 0 & 0 & 0 & -1 & 4 & -14 \\ 0 & 0 & 1 & 0 & 0 & 0 & 1 & -3 \\ 0 & 0 & 0 & 1 & 0 & 0 & 0 & 1 \end{bmatrix}$$
+So the inverse is $\begin{bmatrix}  1 & 2 & -11 & 32 \\ 0 & -1 & 4 & -14 \\  0 & 0 & 1 & -3 \\ 0 & 0 & 0 & 1 \end{bmatrix}$
+\end{solution}
 
 
 \end{document}
