--- a/tex/modules/3-S/sections/2.tex
+++ b/tex/modules/3-S/sections/2.tex
@@ -15,6 +15,17 @@
   combination of basis vectors.
 \end{observation}
 
+\begin{definition}
+The \term{standard basis} of \(\IR^n\) is the set \(\{\vec{e}_1, \ldots, \vec{e}_n\}\) where
+\begin{align*}
+\vec{e}_1 &= \begin{bmatrix}1 \\ 0 \\ 0 \\ \vdots \\ 0 \\  0 \end{bmatrix} &
+\vec{e}_2 &= \begin{bmatrix}0 \\ 1 \\ 0 \\ \vdots \\ 0 \\ 0 \end{bmatrix} &
+\cdots & &
+\vec{e}_n = \begin{bmatrix}0 \\ 0 \\ 0 \\ \vdots \\ 0 \\ 1 \end{bmatrix} 
+\end{align*}
+
+\end{definition}
+
 
 
 \begin{activity}{15}
@@ -89,7 +100,9 @@
 
 \begin{observation}
 Recall that a \textbf{subspace} of a vector space is a subset that is itself a vector space.
+
 \vspace{1em}
+
 One easy way to construct a subspace is to take the span of set, but if the set is linearly 
 dependent it may contain redundant vectors.
 \end{observation}
