--- a/tex/modules/3-S/sections/3.tex
+++ b/tex/modules/3-S/sections/3.tex
@@ -92,7 +92,7 @@
 \begin{fact}
   Every vector space with finite dimension, that is, every
   vector space with a basis of the form
-  \(\{\vect v_1,\vect v_2,\dots,\vect v_n\}\) is isomorphic to a
+  \(\{\vect v_1,\vect v_2,\dots,\vect v_n\}\) is \term{isomorphic} to a
   Euclidean space \(\IR^n\):
 
   \[
