--- a/tex/facilitator-notes.tex
+++ b/tex/facilitator-notes.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
 \usepackage[top=1in,bottom=1in,right=1in,left=1in]{geometry}
-\usepackage{enumerate,multicol}
+\usepackage{enumerate,multicol,amsmath,amssymb}
 
 \begin{document}
 
@@ -10,7 +10,7 @@
 
 \subsection*{Introduction}
 
-These notes are for a one semester, 3-hour sophomore-level Linear Algebra course.  Teams should have at minimum 5 people to ensure a sufficiently sized team factoring in absences.  Each team should be provided with a vertical, ideally non-permanent surface for their work, such as a whiteboard or chalkboard.  A vertical surface encourages collaboration and discussion, and discourages individual work on paper.  These notes have been field-tested at a large regional public university in classes with 25-35 students, with each ``part'' designed to fill one 50-60 minute class period.
+These notes are for a one semester, 3-hour sophomore-level Linear Algebra course.  Teams should have at minimum 5 people to ensure a sufficiently sized team factoring in absences.  Each team should be provided with a vertical, ideally non-permanent surface for their work, such as a whiteboard or chalkboard.  A vertical surface encourages collaboration and discussion, and discourages individual work on paper.  These notes have been field-tested at a large regional public university in classes with 10-35 students, with each ``part'' designed to fill one 50-60 minute class period.
 
 The course consists of 6 modules, listed below; here they are optimized for 29 75-minute class days with 60 minutes each day devoted to application activity, and the remaining 15 minutes for assessment.  Additionally, there is an introduction day (labeled Module I) for the first day of class, and two days of applied activities (labeled Module 7-X) for the end of the semester, though these lack readiness assurance processes and are not full modules. 
 
@@ -52,6 +52,45 @@ We begin this part by quickly introducing augmented matrix notation.  We then be
 \subsubsection*{Part 2}
 This part begins getting students familiar with the CoCalc environment (we note that other instructional contexts may call for different choices in technology).  After getting the technology running and using it to solve a couple systems with no or one solution, we then explore the difference between free and bound variables in Activity E.2.6.
 
+
+\subsection*{Module 2-V: Introduction to vector spaces}
+This module introduces students to abstract vector spaces.  After a motivating activity in part 0, we define vector spaces in part 1, characterizing them as ``things that act like Euclidean spaces''.  The notion of linear combinations and span are introduced and explored through parts 2 and 3, frequently working with vector spaces such as polynomials and matrices after initial examples about Euclidean spaces.  Part 4 introduces the important notion of a subspace.
+
+RAT answers (IF-AT card B005, 11-20):
+\begin{multicols}{10}
+\begin{enumerate}[1)]
+\setcounter{enumi}{10}
+\item C
+\item C
+\item A
+\item C
+\item A
+\item C
+\item B
+\item B
+\item B
+\item C
+\end{enumerate}
+\end{multicols}
+
+\subsubsection*{Part 0}
+This is a half day, as the first RAT typically only takes a half hour, leaving a half of a class period.  This part is devoted to a single, longer activity exploring what properties Euclidean spaces all have in common
+
+\subsubsection*{Part 1}
+The definition of a vector space is introduced here, as anything satisfying the 8 properties identified in Part 0 as applying to all Euclidean spaces.  The use of $\bf{z}$ for an additive identity element is very intentional here, as students are often misled by symbols resembling $0$.  We quickly highlight this in the first example in Activity 1.3, wherein the additive identity is the pair $(0,1)$.  After working with the defintition of a vector space, we introduce the notion of span, and explore the idea geometrically in $\mathbb{R}^2$
+
+\subsubsection*{Part 2}
+Building on students' geometric intuition of span from the previous part, we begin by exploring how to algebraically answer questions about span by solving systems of equations.  Students often have trouble writing down the matrices in 2.6 and 2.7, often wanting to write the transpose, or somehow concatenating matrices in 2.7; instructors are advised to emphasize the parallels with how Euclidean vectors translate into matrices.
+
+\subsubsection*{Part 3}
+We continue our exploration of span by addressing the question of when a set of vectors spans the entire vector space.  We hint at the notion of dimension in the first two activities, which is introduced rigorously in Module 3-S.  In addition to asking these questions about Euclidean vectors, we also include activities again on polynomials and matrices, emphasizing the natural isomorphism to Euclidean space (in as many words).  
+
+\subsubsection*{Part 4}
+This section introduces subspaces, typically a very tricky concept for students.  Several examples are presented as activities with decreasing amounts of scaffolding.
+
+\subsection*{Module 3-S: Structure of vector spaces}
+\subsection*{Module 4-A: Algebraic properties of linear maps}
+\subsection*{Module 5-M: Algebraic structure of matrices}
 
 \subsection*{Module 6-G: Geometric properties of linear maps}
 
