--- a/tex/sample-exercises.tex
+++ b/tex/sample-exercises.tex
@@ -679,4 +679,55 @@ So the inverse is $\begin{bmatrix}  1 & 2 & -11 & 32 \\ 0 & -1 & 4 & -14 \\  0 &
 \end{solution}
 
 
+\begin{problem}{G1} 
+Let \(A \in M_{4,4}\).
+\begin{enumerate}[(a)]
+\item Write a matrix \(R\) such that \(RA\) is the result of adding three times
+		the fourth row of \(A\) to the second row of \(A\).
+\item How are \(\det(RA)\) and \(\det(A)\) related?
+\end{enumerate}
+\end{problem}
+\begin{solution}
+\begin{enumerate}
+\item \(R= \begin{bmatrix} 1 & 0 & 0 & 0 \\ 0 & 1 & 0 & 3 \\ 0 & 0 & 1 & 0 \\ 0 & 0 & 0 & 1 \end{bmatrix}\)
+\item \(\det(RA) = \det A\)
+\end{enumerate}
+\end{solution}
+
+\begin{problem}{G2}
+Find the determinant of the matrix
+\[A=\begin{bmatrix} 1 & 3 & 0 & -1 \\ 1 & 1 & 2 & 4 \\ 1 & 1 & 1 & 3 \\ -3 & 1 & 2 & -5 \end{bmatrix}\]
+\end{problem}
+\begin{solution}
+We first apply a row operation (subtract row three from row 2), and then perform Laplace expansion across the second row.  Then, we compute the $3 \times 3$ determinants by expanding down the first column and across the first row, respectively.
+\begin{align*}
+\det A &= \det \begin{bmatrix} 1 & 3 & 0 & -1 \\ 0 & 0 & 1 & 1 \\ 1 & 1 & 1 & 3 \\ -3 & 1 & 2 & -5 \end{bmatrix} =
+ (-1) \det \begin{bmatrix} 1 & 3 & -1 \\ 1 & 1 & 3 \\ -3 & 1 & -5 \end{bmatrix} + (1) \det \begin{bmatrix} 1 & 3 & 0 \\ 1 & 1 & 1 \\ -3 & 1 & 2 \end{bmatrix} \\
+ &= (-1) \left( (1) \det \begin{bmatrix} 1 & 3 \\ 1 & -5 \end{bmatrix} - (1) \det \begin{bmatrix} 3 & -1 \\ 1 & -5 \end{bmatrix} + (-3) \det \begin{bmatrix} 3 & -1 \\ 1 & 3 \end{bmatrix} \right) + \\
+ &\phantom{=} (1) \left( (1) \det \begin{bmatrix} 1 & 1 \\ 1 & 2 \end{bmatrix} - (3) \det \begin{bmatrix} 1 & 1 \\ -3 & 2 \end{bmatrix} \right) \\
+ &= (-1)\left( (1)(-8)-(1)(-14)+(-3)(10) \right) + (1) \left( (1)(1)-(3)(5) \right) \\
+ &= (-1) \left( -8+14-30 \right) + (1) \left(1-15 \right) \\
+ &=10 
+ \end{align*}
+
+\end{solution}
+
+\begin{problem}{G3}
+Find the eigenvalues of the matrix \(\begin{bmatrix} -2 & -2 \\ 10 & 7 \end{bmatrix} \).
+\end{problem}
+\begin{solution}
+Compute
+\[\det(A-\lambda I) = \det \begin{bmatrix} -2 - \lambda & -2 \\ 10 & 7-\lambda \end{bmatrix} = (-2-\lambda)(7-\lambda)+20 = \lambda ^2 -5\lambda +6 = (\lambda -2)(\lambda -3)\]
+The eigenvalues are the roots of the characteristic polynomial, $2$ and $3$.
+\end{solution}
+
+\begin{problem}{G4}
+Find a basis for the eigenspace associated to the eigenvalue $3$ in the matrix \[\begin{bmatrix} -7 & -8 & 2 \\ 8 & 9 & -1 \\ \frac{13}{2} & 5 & 2 \end{bmatrix}.\]
+\end{problem}
+\begin{solution}
+\[\RREF(A-3I) = \RREF \begin{bmatrix} -10 & -8 & 2 \\ 8 & 6 & -1 \\ \frac{13}{2} & 5 & -1 \end{bmatrix} = \begin{bmatrix} 1 & 0 & 1 \\ 0 & 1 & -\frac{3}{2} \\ 0 & 0 & 0 \end{bmatrix}\]
+The eigenspace associated to $3$ is the kernel of $A-3I$, namely  \[\setBuilder{\begin{bmatrix} -a \\ \frac{3}{2} a \\ a \end{bmatrix}}{a \in \IR}\]
+which has a basis of \(\left\{ \begin{bmatrix} -1 \\ \frac{3}{2} \\ 1 \end{bmatrix} \right\}\).
+\end{solution}
+
 \end{document}
