--- a/tex/modules/2-V/exercises/V1.tex
+++ b/tex/modules/2-V/exercises/V1.tex
@@ -20,8 +20,8 @@ c \odot (x_1,x_2) &= (cx_1, cx_2)
 \end{align*}
 \begin{enumerate}[(a)]
 \item Show that the vector \textbf{addition} \(\oplus\) is \textbf{associative}:
-      \((x_1,y_1) \oplus ((x_2,y_2) \oplus (x_3,y_3))=((x_1,y_1)\oplus (x_2,y_2))\oplus (x_3,y_3)\) for all \((x_1,y_1), (x_2,y_2), (x_3,y_3) \in V\).
-\item Show that scalar multiplication does not distribute over scalar addition, i.e. for some scalars \(a,b \in \IR\) and \((x_1,y_1) \in V\), \( (a+b) \odot (x_1,y_1) \neq a\odot (x_1,y_1) \oplus b \odot (x_2,y_2) \).
+      \((x_1,x_2) \oplus ((y_1,y_2) \oplus (z_1,z_2))=((x_1,x_2)\oplus (y_1,y_2))\oplus (z_1,z_2)\) for all \((x_1,x_2), (y_1,y_2), (z_1,z_2) \in V\).
+\item Show that scalar multiplication does not distribute over scalar addition, i.e. for some scalars \(a,b \in \IR\) and \((x_1,x_2) \in V\), \( (a+b) \odot (x_1,x_2) \neq a\odot (x_1,x_2) \oplus b \odot (x_1,x_2) \).
 \end{enumerate}
 \end{problem}
 
@@ -44,7 +44,7 @@ c \odot (x_1,x_2) &= (cx_1, cx_2)
 Let \(V\) be the set of all pairs of real numbers with the operations, for any \((x_1,x_2), (y_1,y_2) \in V\), \(c\in \IR\),
 \begin{align*}
 (x_1,x_2) \oplus (y_1,y_2) &= (x_1+y_1,x_2+y_2) \\
-c \odot (x_1,y_1) &= (0, cy_1)
+c \odot (x_1,x_2) &= (0, cx_2)
 \end{align*}
 \begin{enumerate}[(a)]
 \item Show that \textbf{scalar multiplication
