--- a/tex/modules/3-S/sections/1.tex
+++ b/tex/modules/3-S/sections/1.tex
@@ -84,7 +84,8 @@
   \begin{bmatrix}4\\3\\0\\2\end{bmatrix}
   \right\}
   \]
-  is linearly dependent.
+  is linearly dependent (the part that shows its linear system has
+  infinitely many solutions).
 \end{activity}
 
 \begin{fact}
